--- a/config.h.in
+++ b/config.h.in
@@ -19,6 +19,9 @@
 /* Define to 1 if you have `bz2' library (-lbz2) */
 #undef HAVE_LIBBZ2
 
+/* Define to 1 if you have `lz4' library (-llz4) */
+#undef HAVE_LIBLZ4
+
 /* Define to 1 if you have `lzma' library (-llzma) */
 #undef HAVE_LIBLZMA
 
