--- a/vs/ugrep/ugrep/ugrep.vcxproj.filters
+++ b/vs/ugrep/ugrep/ugrep.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="src\stats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\lz4-dev\lib\lz4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\glob.hpp">
@@ -225,6 +228,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\reflex\fuzzymatcher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lz4-dev\lib\lz4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
