--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(ugrep,2.4)
+AC_INIT(ugrep,2.5)
 AM_INIT_AUTOMAKE([foreign])
 AM_CONFIG_HEADER(config.h)
 AC_COPYRIGHT([Copyright (C) 2019-2020 Robert van Engelen, Genivia Inc.])
@@ -218,28 +218,35 @@ AC_MSG_CHECKING(for --disable-neon)
 if test "x$with_no_neon" = "xno"; then
   AC_MSG_RESULT(no)
   AC_MSG_CHECKING([whether ${CXX} supports ARM NEON/AArch64 intrinsics])
-  save_CXXFLAGS=$CXXFLAGS
-  CXXFLAGS="-march=native"
-  AC_PREPROC_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
-                    [mneon_ok=yes],
-                    [mneon_ok=no])
+  AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
+      [mneon_ok=yes],
+      [mneon_ok=no])
   if test "x$mneon_ok" = "xyes"; then
-    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
+    SIMD_FLAGS="-DHAVE_NEON"
+  else
+    save_CXXFLAGS=$CXXFLAGS
+    CXXFLAGS="-march=native"
+    AC_PREPROC_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
                       [mneon_ok=yes],
                       [mneon_ok=no])
     if test "x$mneon_ok" = "xyes"; then
-      SIMD_FLAGS="-march=native -DHAVE_NEON"
-    else
-      CXXFLAGS="-march=native -mfpu=neon"
       AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
                         [mneon_ok=yes],
                         [mneon_ok=no])
       if test "x$mneon_ok" = "xyes"; then
-        SIMD_FLAGS="-march=native -mfpu=neon -DHAVE_NEON"
+        SIMD_FLAGS="-march=native -DHAVE_NEON"
+      else
+        CXXFLAGS="-march=native -mfpu=neon"
+        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <arm_neon.h>]], [[uint64x2_t n; uint64_t m = vgetq_lane_u64(n, 0);]])],
+                          [mneon_ok=yes],
+                          [mneon_ok=no])
+        if test "x$mneon_ok" = "xyes"; then
+          SIMD_FLAGS="-march=native -mfpu=neon -DHAVE_NEON"
+        fi
       fi
     fi
+    CXXFLAGS=$save_CXXFLAGS
   fi
-  CXXFLAGS=$save_CXXFLAGS
   AC_MSG_RESULT($mneon_ok)
 else
   AC_MSG_RESULT(yes)
