--- a/config.h.in
+++ b/config.h.in
@@ -31,6 +31,9 @@
 /* Define to 1 if you have `z' library (-lz) */
 #undef HAVE_LIBZ
 
+/* Define to 1 if you have `zstd' library (-lzstd) */
+#undef HAVE_LIBZSTD
+
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
